@@ -21,6 +21,8 @@ Version 1.6.1 (2007-03-22)
   time than the optimized index generated by v1.6.0+ (bug 1669)
   (Thanks to Safe Software for funding this.)
 
+- Added mitab_c_set_quick_spatial_index_mode() to C API (bug 1669)
+
 - Fixed problem writing collections where MITAB was sometimes trying to 
   read past EOF in write mode (bug 1657).
 
@@ -766,5 +768,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.176 2007-03-22 21:01:37 dmorissette Exp $
+$Id: HISTORY.TXT,v 1.177 2007-03-30 18:03:51 dmorissette Exp $
 ------------
